force-app/main/default/objects/ThirdPartyMonitor__c/ThirdPartyMonitor__c.object-meta.xml
<CustomObject>
    <label>Third Party Monitor</label>
    <nameField>
        <displayFormat>TPA-{0000000}</displayFormat>
        <label>ThirdPartyMonitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Monitor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>