force-app/main/default/objects/ThirdPartyMonitor__c/fields/Failed_records__c.field-meta.xml
<CustomField>
    <fullName>Failed_records__c</fullName>
    <description>Failed records count</description>
    <label># Failed records</label>
    <summaryFilterItems>
        <field>ThirdPartyHardware__c.Status__c</field>
        <operation>equals</operation>
        <value>Failed, Internal Failure</value>
    </summaryFilterItems>
    <summaryForeignKey>ThirdPartyHardware__c.JobId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>