force-app/main/default/objects/ThirdPartyMonitor__c/fields/Send_ASN_Acknowlegment_To__c.field-meta.xml
<CustomField>
    <fullName>Send_ASN_Acknowlegment_To__c</fullName>
    <label>Send ASN Acknowlegment To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrow-SFTP</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>OM Team</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>