force-app/main/default/objects/ThirdPartyMonitor__c/fields/Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Records__c</fullName>
    <description>Total number of records to be processed</description>
    <label>Total Records</label>
    <summaryForeignKey>ThirdPartyHardware__c.JobId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>